update api spec for content.posts
